crates/cosmon-cli/tests/snapshots/help__journal_end.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Close the open journal, optionally sealing it with BLAKE3

Usage: cs journal end [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
      --no-seal        Skip the BLAKE3 seal — ephemeral scratch close. By default the session body is sealed (mirrors `prompt_seal` / `briefing_seals`)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
