crates/cosmon-cli/tests/snapshots/help__journal_review.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Review router-staged molecules (verdict-door).

Renders `temp:proposed` molecules as a markdown review file at `.cosmon/state/journals/.review/<sid>.md`, opens it in `$EDITOR`, and — on `--apply` — translates each `verdict:` line into a `keep` / `dismiss` / `undo` transition. Silent when nothing is pending (no editor opens). See ADR-072 §7.

Usage: cs journal review [OPTIONS] [SESSION]

Arguments:
  [SESSION]
          Session id (e.g. `session-2026-04-22T10-31-31Z`). When omitted, review every session that has pending staged molecules

Options:
      --apply
          Parse the previously-composed review file and apply the verdicts. Without this flag, the verb composes the markdown review file and opens it in `$EDITOR`

      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)

      --editor <CMD>
          Override the editor (defaults to `$EDITOR`, then `vi`). Ignored with `--apply` and with `--json`

  -v, --verbose
          Enable verbose output

      --json
          Output in JSON format

  -h, --help
          Print help (see a summary with '-h')
