crates/cosmon-cli/tests/snapshots/help__journal_start.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Open a journal — every note you take lands in it until you end it

Usage: cs journal start [OPTIONS]

Options:
      --config <PATH>    Path to the state directory (default: the galaxy's .cosmon/state/)
      --galaxy <GALAXY>  Galaxy this session belongs to (free-form label)
      --root <MOL_ID>    Root molecule(s) this session is anchored on (repeatable)
  -v, --verbose          Enable verbose output
      --json             Output in JSON format
  -h, --help             Print help
