crates/cosmon-cli/tests/snapshots/help__key_show.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Print the public key (and its path) for an existing operator key file

Usage: cs key show [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
      --key <PATH>     Path to the operator key file. Defaults to `~/.config/cosmon/operator.key`
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
